version/2.0/ripscrip/4.2-mouse-fields-and-pointer.md
# 4.2 Mouse Fields & Pointer

[◀ Prev: 4.1 JPEG Images](4.1-jpeg-images.md) · [Contents](README.md) · [Next: 4.3 Buttons ▶](4.3-buttons.md)

[Mouse fields](../../GLOSSARY.md) - host-defined rectangular hot regions that transmit a [host command](../../GLOSSARY.md) when clicked - the commands that delete them, and control of the mouse pointer shape.

_The 1.54 record is [4.1 in the v1.54 reference](../../1.54/ripscrip/4.1-mouse-fields.md); 2.x adds world-coordinate placement._

Two global rules apply to all mouse regions (fields and buttons alike):

- Up to 128 mouse fields, 128 mouse buttons, or any combination may exist simultaneously, but combined their total number cannot exceed 128 - they share the mouse field [data table](7.1-data-tables.md#mouse-field-table). _(v1.54)_
- When the user clicks the mouse on the screen, all mouse regions (whether mouse fields or mouse buttons) are scanned from most recent to the least recent ("last in, first out"): if regions overlap, the newest one wins the click. _(v1.54, revised v2.A3)_

Mouse fields exist only on the screen (port #0) - they cannot be placed on offscreen [drawing ports](7.0-drawing-ports.md).

## RIP_MOUSE

_Defines a rectangular hot mouse field_

|               |                                                        |
| ------------- | ------------------------------------------------------ |
| **Level**     | 1                                                      |
| **Command**   | `M`                                                    |
| **Arguments** | `num:2 x0:XY y0:XY x1:XY y1:XY clk:1 clr:1 res:5 text` |

**Format:** `!|1M <num> <x0><y0><x1><y1> <clk><clr><res><text>` **Example:** `!|1M00001122331100000host command^M`

**Attributes used:** Viewport, Port (NO; screen ports only), Base Math (current setting)

This command ties together three things:

- A region on the screen
- A mouse-click event
- A string of text to be transmitted by the terminal.

This command defines a rectangular region on the screen that functions as a "hot" mouse area. If the user clicks the [left] mouse button while pointing inside the region, then the terminal must transmit the `<text>` string to the Host. The (x0,y0) parameter MUST be the upper-left corner, and (x1,y1) MUST be the lower-right corner of the region.

The `<num>` parameter used to be used in the older RIPscrip v1.0 specification but is now obsolete. For upwards compatibility, it should be set to "00". _(v1.54)_

The `<clk>` parameter, if 1, indicates that the region should be visibly inverted while the mouse button is down. This offers visual feedback. If `<clk>` is 0, the region will not be inverted while clicked.

The `<clr>` parameter, if 1, will physically zoom the text window to full screen size and clear the screen. This is useful if the `<text>` parameter instructs the host to enter an area of the System that doesn't support RIPscrip graphics.

The `<text>` parameter is a Host command that gets sent when the field is clicked. You may use a caret (^) or a backquote (`` ` ``) to represent control characters, (e.g., ^M for carriage return, `` `G ``, ^C, etc.). Mouse fields may use Data text variables, active text variables, pick lists, control characters and local file playback directives. At no time are templates permitted in simple mouse fields. See the section on host commands for more details about these types of features of RIPscrip. _(v2.A3)_ What the transmitted text can contain is covered in [5.0 Host Commands](5.0-host-commands.md).

Mouse fields are always created relative to port #0 (the screen port). Under no circumstances are mouse fields allowed in offscreen drawing ports - you can't have a clickable mouse area in a region that cannot be clicked (ie, off the screen). If the current drawing port is an offscreen port, or even a port other than port #0, then the mouse field is defined relative to screen port #0 for the purposes of defining its position. The same applies to mouse-based buttons (see the [RIP_BUTTON](4.3-buttons.md#rip_button) command). _(v2.A3)_

Mouse fields that extend partially outside of a viewport are truncated to fit inside the viewport. _(v2.A3)_

When this command is stored in-memory, it is converted to global screen coordinates (for internal storage only). This makes it so that if you have mouse regions defined in multiple different viewports, that each field will be properly inverted at the right location regardless of the currently defined viewport. _(v1.54)_

NOTE: All Mouse Fields are scanned in "last in, first out" order. This means that the last-most received Mouse Field will be the first one scanned for a mouse click. You are limited to a maximum of 128 Mouse Regions or Mouse Buttons (128 total). _(v1.54)_

## RIP_KILL_MOUSE_FIELDS

_Destroys all previously defined hot mouse regions_

|               |          |
| ------------- | -------- |
| **Level**     | 1        |
| **Command**   | `K`      |
| **Arguments** | \<none\> |

**Format:** `!|1K` **Example:** `!|1K`

**Attributes used:** Base Math (N/A)

This command will "forget" all Mouse Regions. Use it at the beginning of each Scene, so that one scene's Mouse Regions don't get used in another.

## RIP_KILL_ENCLOSED_MOUSE_FIELDS

_Added in RIPscrip v2.A0._

_Destroys any Mouse Fields inside a region_

|               |                                   |
| ------------- | --------------------------------- |
| **Level**     | 1                                 |
| **Command**   | `k`                               |
| **Arguments** | `x0:XY y0:XY x1:XY y1:XY flags:4` |

**Format:** `!|1k <x0> <y0> <x1> <y1> <flags>` **Example:** `!|1k00003G2H`

**Attributes used:** Fill Style (see below), Base Math (current setting)

This command will destroy any Mouse Fields or Mouse Active Buttons that are contained inside the given rectangle or that intersect the rectangle. The exact operation of this function is dependent on the setting of the `<flags>` parameter. The `<flags>` parameter can combine any of the following flags to determine the exact mode of operation:

**Region Specific Flags**

| Flags | Description                                              |
| ----- | -------------------------------------------------------- |
| 1     | Kill only fields completely contained (non-intersecting) |
| 2     | Kill only fields that intersect bounding rectangle       |
| 4     | Kill fields entirely outside bounding rectangle          |

> If 1, 2 and 4 are not present, then NO fields are deleted. One of these flags must be supplied for any mouse fields to be deleted.

**What Types of Fields not to Destroy**

| Flags | Description                              |
| ----- | ---------------------------------------- |
| 8     | Don't destroy simple Mouse Fields        |
| 16    | Don't destroy active Mouse Button fields |

> If 8 and 16 are not present, then all types of mouse fields are destroyed.

**What to do With the Affected Region(s)**

| Flags | Description |
| --- | --- |
| 32 | Clear the affected field(s) to black (color 0) |
| 64 | Fill the affected field(s) with current fill color and fill pattern (64 overides 32 in the case that both of 32 and 64 are present). |
| 128 | Perform the 32/64 operations on the whole bounding rectangle (based on Region Specific Flags). |

> If 128 is omitted but 32 or 64 are used, then the mouse field's affected are cleared with the appropriate method. If 128 is present as well, then instead of clearing the individual mouse fields with the given method, the entire region specified by the Region Specific Flags is affected (ie, the entire interior of the bounding rectangle is cleared, etc). If 32, 64 and 128 are omitted, then the affected region/fields are left on the screen visually, but their mouse field definitions are destroyed internally. If 128 is used, but 32 and 64 are omitted then nothing is done visually either.

## RIP_SET_MOUSE_CURSOR

_Added in RIPscrip v2.A1._

_Sets the mouse cursor (pointer) to various shapes_

|               |                        |
| ------------- | ---------------------- |
| **Level**     | 1                      |
| **Command**   | `c`                    |
| **Arguments** | `cursor_style:2 res:4` |

**Format:** `!|1c <cursor_style> <res>` **Example:** `!|1c030000`

**Attributes used:** Base Math (current setting)

This command allows you to alter the current mouse cursor shape that is shown on the screen. This feature lets you change the cursor to another shape to give the user of the terminal an idea that something is going on. For example, changing the cursor to the shape of an hourglass or a watch could give the idea that they should wait for a moment because something is going on.

The `<cursor_style>` parameter is an ID number that specifies which cursor style should be activated. The possible values for this parameter are: _(v2.A1)_

| Style | Description                                    |
| ----- | ---------------------------------------------- |
| 00    | Standard "left-leaning" arrow cursor (default) |
| 01    | Wrist watch cursor                             |
| 02    | Cross-hair cursor                              |
| 03    | I-bar cursor (for text editing)                |
| 04    | Pointing finger cursor                         |
| 05    | Hand held up cursor                            |
| 06    | Hourglass cursor                               |

When a [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) or a [RIP_HEADER](1.1-protocol-and-command-hierarchy.md#rip_header) command is executed, the mouse cursor is automatically reset to the default, standard pointer cursor.

---

[◀ Prev: 4.1 JPEG Images](4.1-jpeg-images.md) · [Contents](README.md) · [Next: 4.3 Buttons ▶](4.3-buttons.md)
